...
            android:background="@android:color/transparent"
            app:iconifiedByDefault="false"
            app:queryHint="Search by title" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moment_show_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar" />
...
